# TextStreams

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.conf  make.sh
src/: bom.h  bom_stream_reader.h  byte_order_mark.h  charset.h  charset_detector.cpp  charset_detector.h  gzip_reader.cpp  gzip_reader.h  gzip_writer.cpp  gzip_writer.h  line_ending.h  line_endings.h  main.cpp  mapped_stream_readee.cpp  mapped_stream_reader.cpp  mapped_stream_reader.h  mapped_stream_writer.cpp  mapped_stream_writer.h  text_stream_reader.cpp  text_stream_reader.h  text_stream_writer.cpp  text_stream_writer.h  translit.cpp  transliterations.cpp  transliterations.h  utf16be_stream_reader.cpp  utf16be_stream_reader.h  utf16be_stream_writer.cpp  utf16be_stream_writer.h  utf16le_stream_reader.cpp  utf16le_stream_reader.h  utf16le_stream_writer.cpp  utf16le_stream_writer.h  utf32be_stream_reader.cpp  utf32be_stream_reader.h  utf32be_stream_writer.cpp  utf32be_stream_writer.h  utf32le_stream_reader.cpp  utf32le_stream_reader.h  utf32le_stream_writer.cpp  (+5 more)
src/readers/: bom_stream_reader.h  gzip_reader.h  mapped_stream_reader.cpp  mapped_stream_reader.h  utf16be_stream_reader.cpp  utf16be_stream_reader.h  utf16le_stream_reader.cpp  utf16le_stream_reader.h  utf32be_stream_reader.cpp  utf32be_stream_reader.h  utf32le_stream_reader.cpp  utf32le_stream_reader.h  utf8_stream_reader.cpp  utf8_stream_reader.h
src/writers/: bom_stream_writer.h  mapped_stream_writer.cpp  mapped_stream_writer.h  utf16be_stream_writer.cpp  utf16be_stream_writer.h  utf16le_stream_writer.cpp  utf16le_stream_writer.h  utf32be_stream_writer.cpp  utf32be_stream_writer.h  (+4 more)
test/: ascii.txt  bad_alloc.cpp  bom.cpp  iso_latin.txt  line_endings.txt  mapped_reader.cpp  mapped_writer.cpp  reader_common.cpp  throwing_input_stream.h  throwing_streambuf.cpp  throwing_streambuf.h  utf16be.txt  utf16be_bom.txt  utf16be_reader.cpp  utf16be_writer.cpp  utf16le.txt  utf16le_bom.txt  utf16le_reader.cpp  utf16le_writer.cpp  utf32be.txt  utf32be_bom.txt  utf32be_reader.cpp  utf32be_writer.cpp  utf32le.txt  utf32le_bom.txt  utf32le_reader.cpp  utf32le_writer.cpp  utf8.txt  utf8_bom.txt  utf8_reader.cpp  utf8_writer.cpp  writer_common.cpp
